# PrinterBot

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  ruff.toml  setup.cfg  tox.ini  tree.txt
.github/workflows/: pylint.yaml
cogs/: __init__.py  enums.py  printer.py  printer_info.py  printer_utils.py
cogs/ui/: __init__.py  embed_helpers.py  printer_buttons.py  printer_menu.py  printer_modal.py
cogs/utils/: __init__.py  admin.py  enums.py  models.py  printer_connection.py  printer_helpers.py
config/: __init__.py  config.py
deployment/: deployment.yml  discordbot.yml
tests/: test_printer_helpers.py  test_printer_info.py
