[metadata]
name = printer-bot
description = Powerful Discord assistant for monitoring and controlling your Bambu Labs 3D printers
author = Vikliienko Tymur
license = MIT
license_file = LICENSE
platforms = linux, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.10, <3.13
zip_safe = false

# Tell setuptools that your source code is in 'cogs'
package_dir =
    =cogs

# Auto-discover all packages in cogs/
packages = find:

install_requires = 
    bambulabs_api >=2.6.1
    discord.py >=2.5.2

[options.packages.find]
where = cogs

[options.extras_requires]
testing = 
    pylint >= 3.3.6
    tox >= 4.28
    mypy >=1.6.0
    pytest >= 8.4
    pytest-cov >= 6.2.0
    pytest-asyncio >= 1.1.0
    pytest-mock >= 3.14

[options.package_data]
utils = py.typed